--- a/src/Miniblog.Core.csproj
+++ b/src/Miniblog.Core.csproj
@@ -41,4 +41,7 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
 </Project>
